globus-gram-job-manager (14.6-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 14:34:54 -0400

globus-gram-job-manager (14.5-2+gt6.@distro@) @distro@; urgency=low

  * Add test dependencies

 -- Globus Toolkit <support@globus.org>  Fri, 25 April 2014 14:19:51 -0400

globus-gram-job-manager (14.5-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:30 -0400

globus-gram-job-manager (14.4-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:56 -0400

globus-gram-job-manager (14.3-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:41 -0500

globus-gram-job-manager (14.2-2+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Mon, 24 Feb 2014 08:11:15 -0500

globus-gram-job-manager (14.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 21 Feb 2014 10:26:14 -0500

globus-gram-job-manager (14.1-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 12:10:35 -0500

globus-gram-job-manager (13.53-1) unstable; urgency=low

  * GT-311: globus job manager is leaking memory

 -- Globus Toolkit <support@globus.org>  Thu, 16 May 2013 11:02:30 -0400

globus-gram-job-manager (13.52-1) unstable; urgency=low

  * GT-384: GRAM mishandles long script responses

 -- Globus Toolkit <support@globus.org>  Wed, 10 Apr 2013 11:27:14 -0400

globus-gram-job-manager (13.51-1) unstable; urgency=low

  * GT-291: Reduce verbosity of INFO level debug log on GRAM

 -- Globus Toolkit <support@globus.org>  Fri, 19 Oct 2012 10:13:32 -0400

globus-gram-job-manager (13.50-1) unstable; urgency=low
